# shadow-ai-scout

./: .env.example  .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml  ui.py
.streamlit/: config.toml
docs/: value-prop-and-buyer.md
sql/: schema.sql
src/scout/: __init__.py  agentic.py  approvals.py  cli.py  clickhouse_loader.py  errors.py  extraction.py  fixtures.py  models.py  pipeline.py  policy.py  report.py  review.py  scorer.py
tests/: test_agentic_errors.py  test_agentic_scan.py  test_anthropic_extractor.py  test_api_errors.py  test_approval_queue.py  test_clickhouse_loader.py  test_gemini_model.py  test_pipeline_cached.py  test_policy_scoring.py  test_report.py  test_scoring_controls.py  test_source_validation.py  test_weekly_review.py
